--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pocket Weather</title>
+    <link rel="stylesheet" type="text/css" href="index.css">
     <link
       rel="stylesheet"
       href="https://bootswatch.com/4/darkly/bootstrap.min.css"
@@ -89,11 +90,14 @@
                 style="height: 100%; min-height: 150px; width: auto;"
               />
             </div>
+          
             <div class="col-12 p-0 m-0 text-center" style="
             display: flex;
             flex-direction: row;
             justify-content: center;
-          ">
+          ">  <div id="loader" class="loader">
+                <img src="loader.gif"  alt="Loading..." />
+              </div>
               <div class="row p-0 m-0">
                 <div class="col-auto p-0 m-0 ">
                   <h2 style="font-size: 4rem;" id="d-degrees-number"></h2>
