--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pocket Weather</title>
-    <link rel="stylesheet" type="text/css" href="index.css">
     <link
       rel="stylesheet"
       href="https://bootswatch.com/4/darkly/bootstrap.min.css"
@@ -103,7 +102,7 @@
                   <h2 style="font-size: 4rem;" id="d-degrees-number"></h2>
                 </div>
                 <div class="col-2 pt-3 ml-3" id="change-units" >
-                  <a href="#" class="text-white change-celsius">C</a> <br />
+                  <a href="#" class="text-white change-celsius loader">C</a> <br />
                 </div>
               </div>
             </div>
@@ -146,7 +145,7 @@
           </div>
 
           <div class="col-12">
-            <ul class="social-icons ">
+            <ul class="social-icons">
               <li>
                 <a class="github" href="https://github.com/akhmadmamirov"><i class="fa fa-github"></i></a>
               </li>
@@ -159,12 +158,24 @@
       </div>
     </footer>
 
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
+  <!-- JS, Popper.js, and jQuery -->
+  <script
+  src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+  integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+  crossorigin="anonymous"
+  ></script>
+  <script
+  src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+  integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+  crossorigin="anonymous"
+  ></script>
+  <script
+  src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+  integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+  crossorigin="anonymous"
+  ></script>
 
-  <script src="storage.js"></script>
-  <script src="weather.js"></script>
+
   <script src="ui.js"></script>
   <script src="app.js"></script>
 </body>
